# DjangHTTPServer

./: README.md  pyproject.toml
project/: main.py  settings.py  urls.py
