[project]
name = "PythonHTTPServer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hudaifasaleh", email = "\"\""},
]
dependencies = [
    "django>=5.1.1",
    "gunicorn>=23.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
